# TeamTalk

./: .gitignore  README.md
server/run/: restart.sh
server/src/: README.md  build_ubuntu.sh  make_log4cxx.sh
server/src/base/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EncDec.cpp  EncDec.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  Makefile  ServInfo.cpp  ServInfo.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  TokenValidator.h  UtilPdu.cpp  UtilPdu.h  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h  log4z.cpp  log4z.h  netlib.cpp  netlib.h  ostype.h  (+4 more)
server/src/db_proxy_server/: CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  Makefile  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf
server/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartModel.cpp  FileAction.cpp  FileModel.cpp  GroupAction.cpp  GroupMessageModel.cpp  GroupModel.cpp  Login.cpp  Login.h  MessageContent.cpp  MessageCounter.cpp  MessageModel.cpp  RecentSession.cpp  RelationModel.cpp  SessionModel.cpp  UserAction.cpp  UserModel.cpp
server/src/file_server/: CMakeLists.txt  config_util.cpp  config_util.h  file_client_conn.cpp  file_client_conn.h  file_msg_server_conn.cpp  file_msg_server_conn.h  (+7 more)
(+162 files in other folders)
